Make our own GameBanana embeds
EXTEND YOUR GAMING with the Dash & Jump Count Mod Mod for Celeste Mod